Fixed layout issue on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,8 +28,9 @@
         font-family: 'Open Sans';
 
         @include media-query($on-palm) {
-            font-size:60px !important;
+            font-size:45px !important;
             letter-spacing: 0px;
+			line-height: 60px;
         }
     }
 
